syntax = "proto3";

option java_package = "net.ramify.model.event.proto";
option java_outer_classname = "EventProto";

import "date.proto";
import "place.proto";
import "age.proto";
import "link.proto";

message Event {

    string id = 1;
    string title = 2;
    DateRange date = 3;
    Place place = 4;
    string personId = 5;
    bool inferred = 6;

    Age givenAge = 10;
    Age computedAge = 11;

    RecordType type = 20;
    bool isUnique = 21;
    repeated Link link = 22;

    string notes = 30;
    string occupation = 31;
    string cause = 32;
    string description = 33;

}

message EventList {

    repeated Event event = 1;

}

enum RecordType {

    UNSPECIFIED = 0;

    BIRTH = 1;
    BAPTISM = 2;

    DEATH = 10;
    BURIAL = 11;
    WILL = 12;
    PROBATE = 13;
    MEMORIAL = 14;

    MARRIAGE = 20;
    BANNS = 21;
    DIVORCE = 22;

    RESIDENCE = 30;
    CENSUS = 31;
    MENTION = 32;
    PAYMENT = 33;
    MEMBERSHIP = 34;
    TRANSACTION = 35;

    MILITARY = 40;

    HISTORIC = 98; //Used for historic non-personal events
    MIXED = 99; //Registers

}